--- a/src/app/books-list/books-list.component.scss
+++ b/src/app/books-list/books-list.component.scss
@@ -1,5 +1,5 @@
 table {
-    width: 80%;
+    width: 100%;
     margin: 20px auto;
   }
 th{
@@ -8,7 +8,8 @@ th{
 
 }
 img {
-    max-height: 50px;
+    max-height: 60px;
+    padding: 2px;
   }
 
   tr{
